# rabbi_rust

./: .gitignore  Cargo.toml  README.md  main.rs
src/: log.rs  main.rs  ws_server.rs
tests/: websocket_test.rs
