[package]
name = "rabbi_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-tungstenite = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
dotenv = "0.15.0"
chrono = "0.4.26"
slog = "2.7"
slog-async = "2.6"
slog-json = "2.3"
slog-term = "2"
lazy_static = "1.4.0"

[dev-dependencies]
tungstenite = "0.14"

[lib]
name = "rabbi_rust"
path = "src/lib.rs"

[[bin]]
name = "rabbi_rust"
path = "src/main.rs"